tests/snapshots/lexer_function_inference.snap
---
source: tests/snapshot_tests.rs
---
[
  Token(
    kind: Function,
    location: Location(
      start: Position(
        line: 1,
        column: 0,
      ),
      end: Position(
        line: 1,
        column: 8,
      ),
    ),
  ),
  Token(
    kind: Identifier("add"),
    location: Location(
      start: Position(
        line: 1,
        column: 8,
      ),
      end: Position(
        line: 1,
        column: 12,
      ),
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 1,
        column: 12,
      ),
      end: Position(
        line: 1,
        column: 13,
      ),
    ),
  ),
  Token(
    kind: Identifier("a"),
    location: Location(
      start: Position(
        line: 1,
        column: 13,
      ),
      end: Position(
        line: 1,
        column: 14,
      ),
    ),
  ),
  Token(
    kind: Comma,
    location: Location(
      start: Position(
        line: 1,
        column: 14,
      ),
      end: Position(
        line: 1,
        column: 15,
      ),
    ),
  ),
  Token(
    kind: Identifier("b"),
    location: Location(
      start: Position(
        line: 1,
        column: 15,
      ),
      end: Position(
        line: 1,
        column: 17,
      ),
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 1,
        column: 17,
      ),
      end: Position(
        line: 1,
        column: 18,
      ),
    ),
  ),
  Token(
    kind: Return,
    location: Location(
      start: Position(
        line: 1,
        column: 18,
      ),
      end: Position(
        line: 2,
        column: 10,
      ),
    ),
  ),
  Token(
    kind: Identifier("a"),
    location: Location(
      start: Position(
        line: 2,
        column: 10,
      ),
      end: Position(
        line: 2,
        column: 12,
      ),
    ),
  ),
  Token(
    kind: Plus,
    location: Location(
      start: Position(
        line: 2,
        column: 12,
      ),
      end: Position(
        line: 2,
        column: 14,
      ),
    ),
  ),
  Token(
    kind: Identifier("b"),
    location: Location(
      start: Position(
        line: 2,
        column: 14,
      ),
      end: Position(
        line: 2,
        column: 16,
      ),
    ),
  ),
  Token(
    kind: End,
    location: Location(
      start: Position(
        line: 2,
        column: 16,
      ),
      end: Position(
        line: 3,
        column: 3,
      ),
    ),
  ),
  Token(
    kind: Local,
    location: Location(
      start: Position(
        line: 3,
        column: 3,
      ),
      end: Position(
        line: 5,
        column: 5,
      ),
    ),
  ),
  Token(
    kind: Identifier("result"),
    location: Location(
      start: Position(
        line: 5,
        column: 5,
      ),
      end: Position(
        line: 5,
        column: 12,
      ),
    ),
  ),
  Token(
    kind: Equal,
    location: Location(
      start: Position(
        line: 5,
        column: 12,
      ),
      end: Position(
        line: 5,
        column: 14,
      ),
    ),
  ),
  Token(
    kind: Identifier("add"),
    location: Location(
      start: Position(
        line: 5,
        column: 14,
      ),
      end: Position(
        line: 5,
        column: 18,
      ),
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 5,
        column: 18,
      ),
      end: Position(
        line: 5,
        column: 19,
      ),
    ),
  ),
  Token(
    kind: Number("5"),
    location: Location(
      start: Position(
        line: 5,
        column: 19,
      ),
      end: Position(
        line: 5,
        column: 20,
      ),
    ),
  ),
  Token(
    kind: Comma,
    location: Location(
      start: Position(
        line: 5,
        column: 20,
      ),
      end: Position(
        line: 5,
        column: 21,
      ),
    ),
  ),
  Token(
    kind: Number("10"),
    location: Location(
      start: Position(
        line: 5,
        column: 21,
      ),
      end: Position(
        line: 5,
        column: 24,
      ),
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 5,
        column: 24,
      ),
      end: Position(
        line: 5,
        column: 25,
      ),
    ),
  ),
  Token(
    kind: EOF,
    location: Location(
      start: Position(
        line: 5,
        column: 25,
      ),
      end: Position(
        line: 6,
        column: 0,
      ),
    ),
  ),
]
