tests/snapshots/lexer_variable_declaration.snap
---
source: tests/snapshot_tests.rs
---
[
  Token(
    kind: Local,
    range: Range(
      start: 0,
      end: 5,
    ),
  ),
  Token(
    kind: Identifier("name"),
    range: Range(
      start: 6,
      end: 10,
    ),
  ),
  Token(
    kind: Colon,
    range: Range(
      start: 10,
      end: 11,
    ),
  ),
  Token(
    kind: Identifier("string"),
    range: Range(
      start: 12,
      end: 18,
    ),
  ),
  Token(
    kind: Assign,
    range: Range(
      start: 19,
      end: 20,
    ),
  ),
  Token(
    kind: String("Stella"),
    range: Range(
      start: 21,
      end: 29,
    ),
  ),
  Token(
    kind: Local,
    range: Range(
      start: 30,
      end: 35,
    ),
  ),
  Token(
    kind: Identifier("age"),
    range: Range(
      start: 36,
      end: 39,
    ),
  ),
  Token(
    kind: Colon,
    range: Range(
      start: 39,
      end: 40,
    ),
  ),
  Token(
    kind: Identifier("number"),
    range: Range(
      start: 41,
      end: 47,
    ),
  ),
  Token(
    kind: Assign,
    range: Range(
      start: 48,
      end: 49,
    ),
  ),
  Token(
    kind: Number("25"),
    range: Range(
      start: 50,
      end: 52,
    ),
  ),
  Token(
    kind: Local,
    range: Range(
      start: 53,
      end: 58,
    ),
  ),
  Token(
    kind: Identifier("is_student"),
    range: Range(
      start: 59,
      end: 69,
    ),
  ),
  Token(
    kind: Colon,
    range: Range(
      start: 69,
      end: 70,
    ),
  ),
  Token(
    kind: Identifier("boolean"),
    range: Range(
      start: 71,
      end: 78,
    ),
  ),
  Token(
    kind: Assign,
    range: Range(
      start: 79,
      end: 80,
    ),
  ),
  Token(
    kind: True,
    range: Range(
      start: 81,
      end: 85,
    ),
  ),
  Token(
    kind: EOF,
    range: Range(
      start: 86,
      end: 86,
    ),
  ),
]
