tests/snapshots/lexer_while_loop.snap
---
source: tests/snapshot_tests.rs
---
[
  Token(
    kind: Local,
    location: Location(
      start: Position(
        line: 1,
        column: 0,
      ),
      end: Position(
        line: 1,
        column: 5,
      ),
    ),
  ),
  Token(
    kind: Identifier("count"),
    location: Location(
      start: Position(
        line: 1,
        column: 5,
      ),
      end: Position(
        line: 1,
        column: 11,
      ),
    ),
  ),
  Token(
    kind: Colon,
    location: Location(
      start: Position(
        line: 1,
        column: 11,
      ),
      end: Position(
        line: 1,
        column: 12,
      ),
    ),
  ),
  Token(
    kind: Identifier("number"),
    location: Location(
      start: Position(
        line: 1,
        column: 12,
      ),
      end: Position(
        line: 1,
        column: 19,
      ),
    ),
  ),
  Token(
    kind: Assign,
    location: Location(
      start: Position(
        line: 1,
        column: 19,
      ),
      end: Position(
        line: 1,
        column: 21,
      ),
    ),
  ),
  Token(
    kind: Number("0"),
    location: Location(
      start: Position(
        line: 1,
        column: 21,
      ),
      end: Position(
        line: 1,
        column: 23,
      ),
    ),
  ),
  Token(
    kind: While,
    location: Location(
      start: Position(
        line: 1,
        column: 23,
      ),
      end: Position(
        line: 3,
        column: 5,
      ),
    ),
  ),
  Token(
    kind: Identifier("count"),
    location: Location(
      start: Position(
        line: 3,
        column: 5,
      ),
      end: Position(
        line: 3,
        column: 11,
      ),
    ),
  ),
  Token(
    kind: Less,
    location: Location(
      start: Position(
        line: 3,
        column: 11,
      ),
      end: Position(
        line: 3,
        column: 13,
      ),
    ),
  ),
  Token(
    kind: Number("10"),
    location: Location(
      start: Position(
        line: 3,
        column: 13,
      ),
      end: Position(
        line: 3,
        column: 16,
      ),
    ),
  ),
  Token(
    kind: Do,
    location: Location(
      start: Position(
        line: 3,
        column: 16,
      ),
      end: Position(
        line: 3,
        column: 19,
      ),
    ),
  ),
  Token(
    kind: Identifier("print"),
    location: Location(
      start: Position(
        line: 3,
        column: 19,
      ),
      end: Position(
        line: 4,
        column: 9,
      ),
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 4,
        column: 9,
      ),
      end: Position(
        line: 4,
        column: 10,
      ),
    ),
  ),
  Token(
    kind: Identifier("count"),
    location: Location(
      start: Position(
        line: 4,
        column: 10,
      ),
      end: Position(
        line: 4,
        column: 15,
      ),
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 4,
        column: 15,
      ),
      end: Position(
        line: 4,
        column: 16,
      ),
    ),
  ),
  Token(
    kind: Identifier("count"),
    location: Location(
      start: Position(
        line: 4,
        column: 16,
      ),
      end: Position(
        line: 5,
        column: 9,
      ),
    ),
  ),
  Token(
    kind: Assign,
    location: Location(
      start: Position(
        line: 5,
        column: 9,
      ),
      end: Position(
        line: 5,
        column: 11,
      ),
    ),
  ),
  Token(
    kind: Identifier("count"),
    location: Location(
      start: Position(
        line: 5,
        column: 11,
      ),
      end: Position(
        line: 5,
        column: 17,
      ),
    ),
  ),
  Token(
    kind: Plus,
    location: Location(
      start: Position(
        line: 5,
        column: 17,
      ),
      end: Position(
        line: 5,
        column: 19,
      ),
    ),
  ),
  Token(
    kind: Number("1"),
    location: Location(
      start: Position(
        line: 5,
        column: 19,
      ),
      end: Position(
        line: 5,
        column: 21,
      ),
    ),
  ),
  Token(
    kind: End,
    location: Location(
      start: Position(
        line: 5,
        column: 21,
      ),
      end: Position(
        line: 6,
        column: 3,
      ),
    ),
  ),
  Token(
    kind: EOF,
    location: Location(
      start: Position(
        line: 6,
        column: 3,
      ),
      end: Position(
        line: 7,
        column: 0,
      ),
    ),
  ),
]
