tests/snapshots/parser_assign_expression.snap
---
source: tests/snapshot_tests.rs
---
Program(
  statements: [
    VariableDeclaration(VariableDeclaration(
      name: Token(
        kind: Identifier("name"),
        location: Location(
          start: Position(
            line: 7,
            column: 6,
          ),
          end: Position(
            line: 7,
            column: 10,
          ),
        ),
      ),
      local: true,
      t: Some(String),
      init: Some(LiteralExpression(StringLiteral(StringLiteral(
        value: "Stella",
        location: Location(
          start: Position(
            line: 7,
            column: 21,
          ),
          end: Position(
            line: 7,
            column: 29,
          ),
        ),
      )))),
      location: Location(
        start: Position(
          line: 7,
          column: 6,
        ),
        end: Position(
          line: 7,
          column: 10,
        ),
      ),
    )),
    VariableDeclaration(VariableDeclaration(
      name: Token(
        kind: Identifier("age"),
        location: Location(
          start: Position(
            line: 8,
            column: 6,
          ),
          end: Position(
            line: 8,
            column: 9,
          ),
        ),
      ),
      local: true,
      t: Some(Number),
      init: Some(Identifier(Identifier(
        name: "name",
        location: Location(
          start: Position(
            line: 8,
            column: 20,
          ),
          end: Position(
            line: 8,
            column: 24,
          ),
        ),
      ))),
      location: Location(
        start: Position(
          line: 8,
          column: 6,
        ),
        end: Position(
          line: 8,
          column: 9,
        ),
      ),
    )),
    AssignStatement(AssignStatement(
      name: Token(
        kind: Identifier("name"),
        location: Location(
          start: Position(
            line: 9,
            column: 0,
          ),
          end: Position(
            line: 9,
            column: 4,
          ),
        ),
      ),
      value: LiteralExpression(NumberLiteral(NumberLiteral(
        value: "10",
        location: Location(
          start: Position(
            line: 9,
            column: 7,
          ),
          end: Position(
            line: 9,
            column: 9,
          ),
        ),
      ))),
      location: Location(
        start: Position(
          line: 9,
          column: 0,
        ),
        end: Position(
          line: 9,
          column: 4,
        ),
      ),
    )),
    VariableDeclaration(VariableDeclaration(
      name: Token(
        kind: Identifier("is_student"),
        location: Location(
          start: Position(
            line: 10,
            column: 6,
          ),
          end: Position(
            line: 10,
            column: 16,
          ),
        ),
      ),
      local: true,
      t: Some(Boolean),
      init: Some(LiteralExpression(BoolLiteral(BoolLiteral(
        value: true,
        location: Location(
          start: Position(
            line: 10,
            column: 28,
          ),
          end: Position(
            line: 10,
            column: 32,
          ),
        ),
      )))),
      location: Location(
        start: Position(
          line: 10,
          column: 6,
        ),
        end: Position(
          line: 10,
          column: 16,
        ),
      ),
    )),
    VariableDeclaration(VariableDeclaration(
      name: Token(
        kind: Identifier("what_is_that"),
        location: Location(
          start: Position(
            line: 12,
            column: 6,
          ),
          end: Position(
            line: 12,
            column: 18,
          ),
        ),
      ),
      local: true,
      t: Some(Unknown),
      init: None,
      location: Location(
        start: Position(
          line: 12,
          column: 6,
        ),
        end: Position(
          line: 12,
          column: 18,
        ),
      ),
    )),
    AssignStatement(AssignStatement(
      name: Token(
        kind: Identifier("what_is_that"),
        location: Location(
          start: Position(
            line: 14,
            column: 0,
          ),
          end: Position(
            line: 14,
            column: 12,
          ),
        ),
      ),
      value: LiteralExpression(NumberLiteral(NumberLiteral(
        value: "10",
        location: Location(
          start: Position(
            line: 14,
            column: 15,
          ),
          end: Position(
            line: 14,
            column: 17,
          ),
        ),
      ))),
      location: Location(
        start: Position(
          line: 14,
          column: 0,
        ),
        end: Position(
          line: 14,
          column: 12,
        ),
      ),
    )),
    AssignStatement(AssignStatement(
      name: Token(
        kind: Identifier("what_is_that"),
        location: Location(
          start: Position(
            line: 17,
            column: 0,
          ),
          end: Position(
            line: 17,
            column: 12,
          ),
        ),
      ),
      value: LiteralExpression(BoolLiteral(BoolLiteral(
        value: true,
        location: Location(
          start: Position(
            line: 17,
            column: 15,
          ),
          end: Position(
            line: 17,
            column: 19,
          ),
        ),
      ))),
      location: Location(
        start: Position(
          line: 17,
          column: 0,
        ),
        end: Position(
          line: 17,
          column: 12,
        ),
      ),
    )),
  ],
)
