tests/snapshots/parser_for_loop.snap
---
source: tests/snapshot_tests.rs
---
Program(
  statements: [
    For(ForStatement(
      variable: Identifier(Identifier(
        name: "i",
        range: Range(
          start: 4,
          end: 5,
        ),
      )),
      init: Literal(Number(NumberLiteral(
        value: "1",
        range: Range(
          start: 7,
          end: 8,
        ),
      ))),
      limit: Literal(Number(NumberLiteral(
        value: "10",
        range: Range(
          start: 10,
          end: 12,
        ),
      ))),
      step: None,
      body: Block(BlockStatement(
        statements: [
          Expression(Call(CallExpression(
            name: Token(
              kind: Identifier("print"),
              range: Range(
                start: 20,
                end: 25,
              ),
            ),
            args: Grouped(GroupedExpression(
              expressions: [
                Identifier(Identifier(
                  name: "i",
                  range: Range(
                    start: 26,
                    end: 27,
                  ),
                )),
              ],
              range: Range(
                start: 25,
                end: 28,
              ),
            )),
          ))),
        ],
      )),
      range: Range(
        start: 0,
        end: 32,
      ),
    )),
  ],
)
