tests/snapshots/parser_simple_declaration.snap
---
source: tests/snapshot_tests.rs
---
Program(
  statements: [
    Local(LocalStatement(
      variables: [
        Variable(
          name: Token(
            kind: Identifier("name"),
            range: Range(
              start: 6,
              end: 10,
            ),
          ),
          ty: Some(String),
        ),
      ],
      initializer: [
        Literal(String(StringLiteral(
          value: "Stella",
          range: Range(
            start: 21,
            end: 29,
          ),
        ))),
      ],
      range: Range(
        start: 0,
        end: 10,
      ),
    )),
  ],
)
